<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/product_list_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/product" />

    <TextView
        android:id="@+id/product_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/product_list_image"
        app:layout_constraintTop_toTopOf="@id/product_list_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/product_list_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:textAppearance="?attr/textAppearanceCaption"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/product_list_image"
        app:layout_constraintTop_toBottomOf="@id/product_list_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/product_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/product_list_image"
        app:layout_constraintTop_toBottomOf="@id/product_list_description"
        app:layout_constraintBottom_toBottomOf="@id/product_list_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>