<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Register Title -->
    <View
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/accent_color"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="@style/heading_1"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toTopOf="@+id/register_title"
        app:layout_constraintStart_toStartOf="@id/register_title"
        app:layout_constraintBottom_toBottomOf="@id/register_title" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/return_to_previous_screen"
        android:src="@drawable/arrow_back"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/register_title"
        app:layout_constraintStart_toStartOf="@id/register_title"
        app:layout_constraintBottom_toBottomOf="@id/register_title" />

    <!-- Register Area -->
    <View
        android:id="@+id/register_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Username Input Area-->
    <TextView
        android:id="@+id/username_register_label_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/heading_2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="@+id/register_area"
        app:layout_constraintStart_toStartOf="@+id/register_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_register_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/username_register_label_heading"
        app:layout_constraintStart_toStartOf="@+id/register_area"
        app:layout_constraintEnd_toEndOf="@+id/register_area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input Area-->
    <TextView
        android:id="@+id/password_register_label_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirement"
        android:textAppearance="@style/heading_2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/username_register_label"
        app:layout_constraintStart_toStartOf="@+id/register_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_register_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/password_register_label_heading"
        app:layout_constraintStart_toStartOf="@+id/register_area"
        app:layout_constraintEnd_toEndOf="@+id/register_area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input Area-->
    <TextView
        android:id="@+id/email_register_label_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_optional"
        android:textAppearance="@style/heading_2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/password_register_label"
        app:layout_constraintStart_toStartOf="@+id/register_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_register_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/email_register_label_heading"
        app:layout_constraintStart_toStartOf="@+id/register_area"
        app:layout_constraintEnd_toEndOf="@+id/register_area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Input Area-->
    <TextView
        android:id="@+id/phone_register_label_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_optional"
        android:textAppearance="@style/heading_2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/email_register_label"
        app:layout_constraintStart_toStartOf="@+id/register_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_register_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_register_label_heading"
        app:layout_constraintStart_toStartOf="@+id/register_area"
        app:layout_constraintEnd_toEndOf="@+id/register_area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address Input Area-->
    <TextView
        android:id="@+id/address_register_label_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_optional"
        android:textAppearance="@style/heading_2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/phone_register_label"
        app:layout_constraintStart_toStartOf="@+id/register_area" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_register_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/address_register_label_heading"
        app:layout_constraintStart_toStartOf="@+id/register_area"
        app:layout_constraintEnd_toEndOf="@+id/register_area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_color"
        android:background="@drawable/rounded_rectangle_background"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textAppearance="@style/button"
        app:layout_constraintTop_toBottomOf="@id/address_register_label_heading"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>