<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Home Title Area (Toolbar) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_title_area"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/accent_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Home Title Text -->
            <TextView
                android:id="@+id/home_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAppearance="@style/heading_1"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- User Icon -->
            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/user_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Setting Icon -->
            <ImageView
                android:id="@+id/setting_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/setting_icon"
                android:src="@drawable/setting_icon"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Notification Icon -->
            <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/notification_icon"
                android:src="@drawable/notification_icon"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/setting_icon" />

            <!-- Cart Icon -->
            <ImageView
                android:id="@+id/cart_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/cart_icon"
                android:src="@drawable/cart_icon"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/notification_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--     Top Bar -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="#9BD400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title_area"
            app:layout_constraintBottom_toTopOf="@id/orderRecyclerView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:contentDescription="Back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/arrow_back" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_back"
                    app:layout_constraintTop_toTopOf="@id/btn_back"
                    app:layout_constraintBottom_toBottomOf="@id/btn_back"
                    android:layout_marginStart="8dp" />

                <ImageView
                    android:id="@+id/btn_showMore"
                    android:layout_width="36dp"
                    android:layout_height="39dp"
                    android:contentDescription="More"
                    app:srcCompat="@drawable/more_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_back"
                    app:layout_constraintBottom_toBottomOf="@id/btn_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- RecyclerView -->
        <!--    <androidx.recyclerview.widget.RecyclerView-->
        <!--        android:id="@+id/orderRecyclerView"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="0dp"-->
        <!--        android:padding="8dp"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/cardView"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/viewHome"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        tools:listitem="@layout/order_item" />-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintBottom_toTopOf="@+id/pageNavigationLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/order_item" />

        <LinearLayout
            android:id="@+id/pageNavigationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/orderRecyclerView"
            app:layout_constraintBottom_toTopOf="@id/viewHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Previous" />

            <!--        <TextView-->
            <!--            android:id="@+id/txtPageIndex"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:text="Page 1"-->
            <!--            android:textSize="16sp"-->
            <!--            android:padding="16dp" />-->
            <TextView
                android:id="@+id/pageIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Page 1 of 1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next" />

        </LinearLayout>


        <!-- Bottom Navigation -->
        <View
            android:id="@+id/viewHome"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/accent_color"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Home -->
        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/home_icon"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/viewHome"
            app:layout_constraintStart_toStartOf="@id/viewHome" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintStart_toStartOf="@id/home_icon"
            app:layout_constraintEnd_toEndOf="@id/home_icon"
            app:layout_constraintTop_toBottomOf="@id/home_icon" />

        <!-- Product -->
        <ImageView
            android:id="@+id/product_icon"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:src="@drawable/product_icon"
            android:contentDescription="@string/product_icon"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="@id/viewHome"
            app:layout_constraintStart_toEndOf="@id/home_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            app:layout_constraintTop_toBottomOf="@id/product_icon"
            app:layout_constraintStart_toStartOf="@id/product_icon"
            app:layout_constraintEnd_toEndOf="@id/product_icon" />

        <!-- Chat -->
        <ImageView
            android:id="@+id/chat_icon"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:src="@drawable/chat_icon"
            android:contentDescription="@string/chat_icon"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="@id/viewHome"
            app:layout_constraintStart_toEndOf="@id/product_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            app:layout_constraintTop_toBottomOf="@id/chat_icon"
            app:layout_constraintStart_toStartOf="@id/chat_icon"
            app:layout_constraintEnd_toEndOf="@id/chat_icon" />

        <!-- Order -->
        <ImageView
            android:id="@+id/order_icon"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:src="@drawable/order_icon"
            android:contentDescription="@string/order_icon"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="@id/viewHome"
            app:layout_constraintStart_toEndOf="@id/chat_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            app:layout_constraintTop_toBottomOf="@id/order_icon"
            app:layout_constraintStart_toStartOf="@id/order_icon"
            app:layout_constraintEnd_toEndOf="@id/order_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
